make header sticky by scrolling down, update background-color on small screen, fix dependency vulnerability

--- a/oba-ui/src/styles.scss
+++ b/oba-ui/src/styles.scss
@@ -13,6 +13,11 @@
 
 .oba-app {
 
+  .logo {
+    width: 200px;
+    height: auto;
+  }
+
   font-size: 1.125rem;
 
   button {
@@ -106,4 +111,9 @@
 
 }
 
+@media (max-width: 767px) {
+  .bg-sm-light {
+    background-color: $COLOR_LIGHT_GREY-10;
+  }
+}
 
